[package]
name = "use_grpc"
version = "0.1.0"
authors = ["Binlogo <binboy@live.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2"
futures = "0.3.*"
grpc = "0.8.1"
grpc-protobuf = "0.8.1"
tls-api = "0.4.0"

[build-dependencies]
protoc-rust-grpc = "0.8.1"